--- a/hello/project.json
+++ b/hello/project.json
@@ -6,14 +6,14 @@
     "frameRate" : 60,
     "noCache" : false,
     "id" : "gameCanvas",
-    "renderMode" : 0,
+    "renderMode" : 1,
     "engineDir":"frameworks/cocos2d-html5",
 
-    "modules" : ["cocos2d"],
+    "modules" : ["cocos2d", "ccpool", "cocostudio"],
 
     "jsList" : [
         "src/resource.js",
         "src/app.js",
-        "src/whg/http.js"
+        "src/whg/ch12.js"
     ]
 }
