--- a/hello/project.json
+++ b/hello/project.json
@@ -14,6 +14,6 @@
     "jsList" : [
         "src/resource.js",
         "src/app.js",
-        "src/whg/http.js"
+        "src/whg/httpProtobuf.js"
     ]
 }
